# libphonenumber_desktop

./: .metadata  README.md  justfile  pubspec.yaml
.github/workflows/: build-libs.yaml  debug-example.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
frameworks/rust_crate/rust_crate/: bridge_generated.h
ios/: libphonenumber_desktop.podspec  metadata_god.podspec
ios/Classes/: LibphonenumberDesktopPlugin.h  LibphonenumberDesktopPlugin.m  MetadataGodPlugin.h  MetadataGodPlugin.m  SwiftLibphonenumberDesktopPlugin.swift  SwiftMetadataGodPlugin.swift
lib/: libphonenumber_desktop.dart  libphonenumber_desktop_method_channel.dart  libphonenumber_desktop_platform_interface.dart
lib/src/: bridge_generated.dart  ffi.dart  libphonenumber_desktop.dart
linux/: CMakeLists.txt  libphonenumber_desktop_plugin.cc
macos/: .gitignore  libphonenumber_desktop.podspec
macos/Classes/: LibphonenumberDesktopPlugin.swift
macos/Libs/: librust.dylib
rust/: Cargo.toml  librust.dylib
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  main.rs
windows/: CMakeLists.txt  libphonenumber_desktop_plugin.cpp  libphonenumber_desktop_plugin.h  libphonenumber_desktop_plugin_c_api.cpp
(+7 files in other folders)
