[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "rust"
path = "src/main.rs"

[dependencies]
flutter_rust_bridge = "1"
anyhow = "1"
phonenumber = { git = "https://github.com/meh/rust-phonenumber", rev = "f936b0545fc8ad3ac195714de0c6ae8cd941723e" }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
